feat: subidas de novos end points de product e post
